--- a/assets/style/style-index.css
+++ b/assets/style/style-index.css
@@ -1,2 +1,100 @@
 @import url('./reset.css');
 
+/* -------------------------- */
+/* ----------Header---------- */
+/* -------------------------- */
+header {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    margin: .5rem 2rem;
+    padding-bottom: .5rem;
+    border-bottom: 1px solid var(--cor-claro-secundaria);
+}
+
+.header-logo {
+    width: 100px;
+    height: auto;
+}
+
+.header-nav-lista {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
+}
+
+.header-nav-item {
+    margin-left: 3rem;
+}
+
+.header-nav-item a {
+    color: var(--cor-claro-texto-primaria);
+    font-family: var(--fonte-1);
+}
+
+.header-nav-item .curriculo {
+    background: var(--cor-claro-secundaria);
+    padding: .5rem 2rem;
+    border-radius: 10px;
+    box-shadow: 1px 1px 5px var(--box-shadow-claro);
+    color: var(--cor-claro-texto-secundaria);
+}
+
+/* -------------------------- */
+/* -----------Main----------- */
+/* -------------------------- */
+h1 {
+    font-family: var(--fonte-1);
+    font-size: 128px;
+    text-align: center;
+    margin-top: 9rem;
+    line-height: 128px;
+}
+
+h1 strong {
+    margin-right: 15%;
+}
+
+h1 i {
+    font-size: 156px;
+    margin-left: 15%;
+    position: relative;
+    z-index: 9;
+    text-shadow: 1px 1px 10px var(--box-shadow-escuro);
+}
+
+.main-img-tex {
+    display: flex;
+    align-items: end;
+    margin-top: -3rem;
+    position: relative;
+    z-index: auto;
+}
+
+.foto-perfil {
+    margin-left: 35%;
+    width: 30%;
+}
+
+.main-img-tex p {
+    font-size: 20px;
+    width: 90%;
+    text-align: start;
+    margin-left: 3%;
+    margin-right: 5%;
+}
+
+.botoes-rapidos {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 15px;
+    justify-content: start;
+    margin-left: 3%;
+}
+
+.botoes-rapidos img {
+    width: 35px;
+}
