--- a/assets/style/style-index.css
+++ b/assets/style/style-index.css
@@ -35,7 +35,7 @@ header {
     font-family: var(--fonte-1);
 }
 
-.header-nav-item .curriculo {
+.header-nav-item .curriculo, .curriculo {
     background: var(--cor-claro-secundaria);
     padding: .5rem 2rem;
     border-radius: 10px;
@@ -59,7 +59,7 @@ h1 strong {
 }
 
 h1 i {
-    font-size: 156px;
+    font-size: 144px;
     margin-left: 15%;
     position: relative;
     z-index: 9;
@@ -98,4 +98,12 @@ h1 i {
 
 .botoes-rapidos img {
     width: 35px;
+}
+
+/* -------------------------- */
+/* --------Sobre Mim--------- */
+/* -------------------------- */
+.sobre-mim {
+    height: 100vh;
+    background: var(--cor-claro-terciaria);
 }
