--- a/assets/style/reset.css
+++ b/assets/style/reset.css
@@ -21,6 +21,10 @@ li {
     list-style: none;
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
 :root {
     /* Cores - tema claro */
     --cor-claro-primaria: white;
